--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 
 <body>
   <header>
+    <h1>Essen Spiel</h1>
+    <time>Oct. 26-28, 2017</time>
   </header>
+  <main>
+  </main>
 
 </body>
 </html>
