--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>Essen Spiel</h1>
-    <time>Oct. 26-28, 2017</time>
+    <p>Oct. 26-28, 2017</p>
   </header>
   <main>
   </main>
