--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <p>Oct. 26-28, 2017</p>
   </header>
   <main>
+    <p>Four exciting days of playing & testing thousands of games from designers and publishers all over the world.</p>
+    <video src="https://assets.learn-the-web.algonquindesign.ca/placeholders/video.mp4" control></video>
+    <h2>Tickets</h2>
+    <p>Buy your multi-day pass now before they're all sold out!</p>
+    <data>€480 for</data><p>4 days</p>
+
   </main>
 
 </body>
